# ksa_compliance

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  license.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ksa_compliance/: __init__.py  background_jobs.py  compliance_checks.py  createxml.py  csrconfig.txt  customer_feedback.py  design.md  e_invoice_model.py  e_invoice_xml.py  edr.html  endpoints.py  enpoints.py  generate_xml.py  hooks.py  invoice.py  jinja.py  modules.txt  patches.txt  premium_announcement.py  qr_gen.py  sample.py  setup.py  shell.py  test.py  throw.py  translation.py  zatca_api.py  zatca_cli.py  zatca_cli_setup.py  zatca_files.py
ksa_compliance/desktop_icon/: zatca.json
ksa_compliance/fixtures/: print_format.json
ksa_compliance/ksa_compliance/: e_invoice.xml
ksa_compliance/output_models/: business_settings_output_model.py  e_invoice_output_model.py  models.py  output_model_testing.md  salestest.json  service.py  tax.py  test.json  test_e_invoice_output_model.py
ksa_compliance/overrides/: rowwise_rounding.py
ksa_compliance/patches/: _2024_02_27_add_counting_docs_for_existing_settings.py  _2024_03_20_update_blank_integration_status_in_additional_field.py  _2024_03_21_update_last_attempt_in_additional_fields.py  _2024_03_21_uuid_indexes.py  _2024_06_05_set_cli_setup_to_manual.py  _2024_06_13_remove_custom_fields_from_sales_invoice.py  _2024_07_08_set_siaf_is_latest.py  _2024_08_19_update_old_fatoora_url_in_business_settings.py  _2024_09_04_delete_obsolete_print_formats.py  _2024_09_18_migrate_zatca_files_under_site.py  (+8 more)
(+128 files in other folders)
