[project]
name = "ksa_compliance"
authors = [
    { name = "LavaLoon", email = "info@lavaloon.com"}
]
description = "KSA Compliance app for E-invoice"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "result",
    "pyqrcode~=1.2.1",
    "pathvalidate~=3.2.1"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
